--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -28,10 +28,10 @@
       where: "railway IN ('rail', 'tram', 'light_rail', 'subway', 'narrow_gauge', 'disused', 'construction')"
       table: planet_osm_line
     - name: 'openrailwaymap_line_low'
-      where: "railway = 'rail' AND tags->'usage' IN ('main', 'branch') AND tags->'service' IS NULL"
+      where: "railway = 'rail' AND tags->'usage' IN ('main', 'branch') AND service IS NULL"
       table: planet_osm_line
     - name: 'openrailwaymap_line_med'
-      where: "railway = 'rail' AND tags->'usage' = 'main' AND tags->'service' IS NULL"
+      where: "railway = 'rail' AND tags->'usage' = 'main' AND service IS NULL"
       table: planet_osm_line
     - name: 'openrailwaymap_electrification_signals'
       where: "railway = 'signal' AND tags ? 'railway:signal:electricity'"
