Deduplicate code: use list of styles when creating cache directories

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -311,11 +311,7 @@
     group: tirex
     mode: 0755
     state: directory
-  loop:
-    - standard
-    - maxspeed
-    - signals
-    - electrification
+  loop: "{{ tileserver.styles }}"
   notify:
     - systemd reload tirex-backend-manager
     - systemd reload tirex-master
