Restart timers if modified
When changing OnCalendar properties of a Systemd timer, the timer needs
to be restarted as well.

--- a/ansible/roles/tileserver/tasks/main.yml
+++ b/ansible/roles/tileserver/tasks/main.yml
@@ -168,6 +168,7 @@
       WantedBy=default.target
   notify:
     - systemd daemon-reload
+    - systemd restart update-data.timer
 
 - name: Write Systemd Unit file for rerender-lowzoom-tiles.service
   copy:
