--- a/ansible/roles/website/templates/api.openrailwaymap.org.conf
+++ b/ansible/roles/website/templates/api.openrailwaymap.org.conf
@@ -6,6 +6,9 @@
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
+
+WSGIDaemonProcess api_v2 python-path=/opt/OpenRailwayMap-api processes=4 threads=1 user=openrailwaymap
+
 {% if letsencrypt %}
 <VirtualHost *:443>
     SSLEngine on
