Ban heavy users of the tile server

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -66,6 +66,13 @@
       notify:
         - systemd reload tirex-backend-manager
 
+- name: Enable Apache module mod_remoteip
+  apache2_module:
+    name: remoteip
+    state: present
+  notify:
+    - systemd restart apache2
+
 - name: Enable Apache module mod_ssl
   apache2_module:
     name: ssl
