--- a/ansible/openrailwaymap/security.yml
+++ b/ansible/openrailwaymap/security.yml
@@ -53,6 +53,23 @@
       port: '4949'
       proto: tcp
 
+  - name: 'ufw: reject heavy users by firewall'
+    ufw:
+      comment: 'ban heavy tileserver user, {{ item.comment }}'
+      rule: reject
+      insert: 1
+      from_ip: '{{ item.from_ip }}'
+      to_port: '{{ item.to_port }}'
+      proto: tcp
+    notify: ufw reload
+    loop:
+      - from_ip: 87.234.54.154
+        to_port: 80
+        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+      - from_ip: 87.234.54.154
+        to_port: 443
+        comment: "SynxHealthTest, one test request per second, most frequent source IP"
+
   - name: 'ufw: default deny'
     ufw:
       default: 'reject'
@@ -82,4 +99,8 @@
     - name: reload fail2ban
       systemd:
         name: fail2ban
+        state: reloaded
+
+    - name: ufw reload
+      ufw:
         state: reloaded
