--- a/ansible/roles/tileserver_step2/handlers/main.yml
+++ b/ansible/roles/tileserver_step2/handlers/main.yml
@@ -14,3 +14,7 @@
   systemd:
     name: tirex-master
     state: reloaded
+- name: systemd restart delete_old_metatiles.timer
+  systemd:
+    name: delete_old_metatiles.timer
+    state: restarted
