Adapt to latest version of postgresql_query module

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -1,17 +1,10 @@
 # SPDX-License-Identifier: MIT
-# TODO handle recreation of existing views if schema changes
 - name: Create database functions and views for the map style
-  become: true
-  become_user: osmimport
-  postgresql_query:
-    db: '{{ osm_dbname }}'
-    login_user: osmimport
-    path_to_script: '{{ cartocss_dir }}/sql/{{ item }}'
-    as_single_query: yes
+  include_tasks: run_sql.yml
   loop:
-    - functions.sql
-    - osm_carto_views.sql
-    - get_station_importance.sql
+    - '{{ cartocss_dir }}/sql/functions.sql'
+    - '{{ cartocss_dir }}/sql/osm_carto_views.sql'
+    - '{{ cartocss_dir }}/sql/get_station_importance.sql'
 
 - name: Create indexes to boost up rendering
   become: true
