Move Apache stuff to a separate role

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 ansible_python_interpreter = python3
+display_ok_hosts = false
+hash_behaviour = merge
 inventory = hosts
 remote_user = root
 
