improve list of packages to be installed

--- a/ansible/openrailwaymap/base.yml
+++ b/ansible/openrailwaymap/base.yml
@@ -32,4 +32,4 @@
 
   - name: Install some other utility packages
     apt:
-      name: [htop, screen, time, goaccess]
+      name: [vim, htop, tmux, time]
