--- a/ansible/openrailwaymap/openrailwaymap.yml
+++ b/ansible/openrailwaymap/openrailwaymap.yml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: MIT
-- hosts: all
+- hosts: webservers
   become: yes
   tags: webserver
   tasks:
@@ -15,7 +15,7 @@
       import_role:
         name: roles/letsencrypt
 
-- hosts: all
+- hosts: tileservers
   become: yes
   tags: tileserver
   tasks:
@@ -26,7 +26,7 @@
       import_role:
         name: roles/tileserver_step2
 
-- hosts: all
+- hosts: website_servers
   become: yes
   tags: website
   tasks:
@@ -46,7 +46,6 @@
     - name: 'Blog'
       import_role:
         name: roles/blog
-      vars:
 
 - hosts: mailservers
   become: yes
