Add knallfrosch as tileserver, make role more flexible
knallfrosch does not have a /nvme directory because it makes no sense on
a host with all disks being NVMe drives.

This commit improves handling of the transient Systemd unit for OSM data
import. You should now be able to just run Ansible as often as you want
until the import is complete. Once the import is finished, all remaining
tileserver setup tasks will be executed.

--- a/ansible/host_vars/buegelfalte.openrailwaymap.org.yml
+++ b/ansible/host_vars/buegelfalte.openrailwaymap.org.yml
@@ -1,5 +1,9 @@
 debian_version: buster
 pg_version: 11
+timestamp_directory: /nvme/data
+osm_data_dir: /nvme/data/planet
+flatnodes_dir: /nvme/data/flatnodes
+tile_expiry_dir: /nvme/data/tileupdate
 website_hostname_aliases:
   - buegelfalte.openrailwaymap.org
 
