--- a/ansible/roles/tileserver/templates/config.cfg
+++ b/ansible/roles/tileserver/templates/config.cfg
@@ -20,7 +20,7 @@
 # Paths for OSM Data
 # ------------------
 # Directory for OSM planet and its filtered version
-OSM_DIR=/nvme/data/planet
+OSM_DIR={{osm_data_dir}}
 # Path to planet dump file
 PLANET_FILE=$OSM_DIR/planet-latest.osm.pbf
 # Temporary directory for Pyosmium (downloaded diffs)
@@ -37,7 +37,7 @@ LAST_DERIVED_DIFF=$OSM_DIR/railway_updates_old.osc.gz
 DERIVED_DIFF_TMP=$OSM_DIR/tmp_railway_updates.osc.gz
 
 # Path to timestamp file for website
-TIMESTAMP_PATH=/nvme/data/timestamp.txt
+TIMESTAMP_PATH={{ timestamp_directory }}/timestamp.txt
 
 # Binaries
 # --------
@@ -76,7 +76,7 @@ OSM2PGSQL_LUA=$MAPSTYLE_DIR/setup/openstreetmap-carto.lua
 # Flatnodes file path (about 50 GB large file which should be located on a SSD drive)
 # Do not set this variable (comment it out) if you want to store node locations in the
 # planet_osm_nodes table. This is slower for a full planet import (both filtered and not filtered)
-OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
+OSM2PGSQL_FLATNODES={{ flatnodes_dir }}/flat.nodes
 # Number of processes for Osm2pgsql for update
 OSM2PGSQL_NUMBER_PROCESSES=2
 # Zoom levels to expire tiles at
